...

      OutlinedButton(
          modifier = Modifier.fillMaxWidth().height(56.dp),
          onClick = component::onLoginClicked,
          shape = RoundedCornerShape(8.dp),
      ) {
        Text("Log in", style = MaterialTheme.typography.titleMedium)
      }

      Spacer(modifier = Modifier.height(48.dp))

      Row(
          modifier = Modifier.padding(bottom = 16.dp),
...
