...
              modifier = Modifier.fillMaxSize(),
          )
        }

        is MyGroupsListComponent -> {
          MyGroupsListScreen(
              modifier = Modifier.fillMaxSize().testTag("group-list"),
              component = child,
          )
        }

        is GroupFlowComponent -> {
          GroupFlowScreen(
...
